--- a/index.html
+++ b/index.html
@@ -3,100 +3,142 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ComplyX-inspired Coding Exercises Dashboard</title>
+    <title>Modern Coding Dashboard</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css">
     <style>
         body {
-            background-color: #1F1F2E;
-            color: #E0E0E3;
-            font-family: 'Arial', sans-serif;
+            background: #000;
+            color: #F6F6EF;
+            font-family: 'Inter', sans-serif;
+            height: 100vh;
+            display: flex;
+            flex-direction: column;
+        }
+        .sidebar {
+            width: 60px;
+            background-color: #1A1A2E;
+            height: 100%;
+            padding: 15px 5px;
+            display: flex;
+            flex-direction: column;
+            position: fixed;
+            top: 0;
+            left: 0;
+            align-items: center;
+        }
+        .sidebar a {
+            color: #F6F6EF;
+            text-decoration: none;
+            padding: 10px;
+            margin-bottom: 10px;
+            transition: background 0.3s ease;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            font-size: 0.75rem;
+        }
+        .sidebar a:hover {
+            background-color: #44445A;
+            border-radius: 8px;
+        }
+        .sidebar a i {
+            margin-bottom: 5px;
+            font-size: 1.5rem;
+        }
+        .sidebar .divider {
+            height: 2px;
+            background-color: #CACCC6;
+            width: 100%;
+            margin: 20px 0;
         }
         .header {
-            padding: 20px;
-            border-bottom: 2px solid #39395B;
-            text-align: center;
-            background: linear-gradient(to right, #3E3E5A, #252539);
-        }
-        .container {
-            max-width: 1280px;
-            margin: 40px auto;
-        }
-        .card {
-            background-color: #2D2D40;
-            border-radius: 8px;
-            padding: 20px;
-            transition: all 0.3s ease;
-        }
-        .card:hover {
-            transform: translateY(-5px);
-        }
-        .filters, .card {
-            margin-bottom: 20px;
-        }
-        .filters {
+            padding: 15px 25px;
+            background: #666;
+            margin-left: 60px;
+            position: fixed;
+            top: 0;
+            left: 0;
+            right: 0;
+            z-index: 10;
             display: flex;
             justify-content: space-between;
-            padding: 10px;
+            align-items: center;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
         }
-        .filters button {
-            padding: 8px 16px;
-            border: none;
-            background-color: #3E3E5A;
-            color: #E0E0E3;
-            border-radius: 4px;
-            cursor: pointer;
+        .header .nav-tabs {
+            display: flex;
+            gap: 15px;
         }
-        .filters button:hover {
-            background-color: #575778;
+        .header .nav-tabs a {
+            color: #F6F6EF;
+            text-decoration: none;
+            padding: 8px 15px;
+            transition: background 0.3s ease;
+            border-radius: 8px;
+            font-weight: 500;
+        }
+        .header .nav-tabs a:hover {
+            background-color: #2A2A40;
+        }
+        .content-container {
+            margin-top: 80px;
+            margin-left: 60px;
+            padding: 30px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: calc(100vh - 80px);
+            position: relative;
+        }
+        .homepage-message {
+            text-align: center;
+            color: #F6F6EF;
+            font-size: 4rem;
+            font-weight: 200;
+            position: relative;
+            z-index: 1;
+        }
+        .spiral-animation {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0;
+            background: url('https://upload.wikimedia.org/wikipedia/commons/8/88/GoldenSpiralLogarithmic_color_inverted.png') no-repeat center;
+            background-size: cover;
+            opacity: 0.1;
+            animation: spin 20s linear infinite;
+        }
+        @keyframes spin {
+            from {transform: rotate(0deg);}
+            to {transform: rotate(360deg);}
         }
     </style>
 </head>
 <body>
-    <header class="header">
-        <h1 class="text-4xl font-bold">Coding Exercises Dashboard</h1>
-        <p class="text-sm mt-2">Track your progress through Python exercism exercises</p>
-    </header>
-
-    <div class="container">
-        <div class="filters">
-            <button id="all">All Exercises</button>
-            <button id="completed">Completed</button>
-            <button id="inProgress">In Progress</button>
-            <button id="notStarted">Not Started</button>
-        </div>
-
-        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
-            <div class="card">
-                <h2 class="text-2xl font-bold">Exercise 1: Hello World</h2>
-                <p class="mt-2">Introduction to Python, displaying a simple greeting message.</p>
-                <div class="mt-4">
-                    <button class="bg-purple-600 hover:bg-purple-700 text-white px-4 py-2 rounded">View Details</button>
-                </div>
-            </div>
-
-            <div class="card">
-                <h2 class="text-2xl font-bold">Exercise 2: Sum of Numbers</h2>
-                <p class="mt-2">Write a program that calculates the sum of given numbers.</p>
-                <div class="mt-4">
-                    <button class="bg-purple-600 hover:bg-purple-700 text-white px-4 py-2 rounded">View Details</button>
-                </div>
-            </div>
-
-            <!-- Repeat similar cards for other exercises -->
-        </div>
+    <div class="sidebar">
+        <h2><i class="fas fa-compass"></i></h2>
+        <a href="coding.html"><i class="fas fa-desktop"></i> Coding</a>
+        <div class="divider"></div>
+        <a href="home.html"><i class="fas fa-home"></i> Home</a>
+        <a href="python.html"><i class="fas fa-code"></i> Python</a>
+        <a href="swift.html"><i class="fas fa-bolt"></i> Swift</a>
+        <a href="javascript.html"><i class="fab fa-js"></i> Javascript</a>
+        <div class="divider"></div>
+        <a href="settings.html" class="settings"><i class="fas fa-cog"></i> Settings</a>
     </div>
 
-    <script>
-        const allBtn = document.getElementById('all');
-        const completedBtn = document.getElementById('completed');
-        const inProgressBtn = document.getElementById('inProgress');
-        const notStartedBtn = document.getElementById('notStarted');
+    <header class="header">
+        <nav class="nav-tabs">
+            <a href="editor.html">Editor</a>
+            <a href="learning-map.html">Learning Map</a>
+        </nav>
+    </header>
 
-        allBtn.addEventListener('click', () => alert('Show all exercises'));
-        completedBtn.addEventListener('click', () => alert('Show completed exercises'));
-        inProgressBtn.addEventListener('click', () => alert('Show in-progress exercises'));
-        notStartedBtn.addEventListener('click', () => alert('Show not-started exercises'));
-    </script>
+    <div class="content-container">
+        <div class="spiral-animation"></div>
+        <div class="homepage-message">Let's Code</div>
+    </div>
 </body>
 </html>
